Setup app settings connection string and user secrets
Added a ConnectionStrings object literal in app settings. Included a default connection that's missing the password

Generated the UserSecretsId for the project. Placed the local MySQL server's password in the secrets file outside tracked files.

--- a/MySQLThroughEntityFramework/MySQLThroughEntityFramework.csproj
+++ b/MySQLThroughEntityFramework/MySQLThroughEntityFramework.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>89d01f21-ecd0-4ec8-bf34-392c138140bf</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
