--- a/MySQLThroughEntityFramework/appsettings.json
+++ b/MySQLThroughEntityFramework/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionNoPassword": "Server=localhost;Database=entity_framework_dbtest;User=root;"
+  }
 }
